--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sinatra Template</title>
+    <title>Trivia Pie</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-
   <body>
     <%= yield %>
+    </div>
   </body>
 </html>
