--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,18 +1,27 @@
 <h1>Pick a category</h1>
 <div id="slice-bar">
-  <div class="category-button">
-    <a href="/film"><img class="icon" src="/images/entertainment-film.svg" alt="entertainment-film"></a>
-  </div>
-  <div class="category-button">
-    <a href="/science"><img class="icon" src="/images/science-nature.svg" alt="science-nature"></a>
-  </div>
-  <div class="category-button">
-    <a href="/history"><img class="icon" src="/images/history.svg" alt="history"></a>
-  </div>
-  <div class="category-button">
-    <a href="/sports"><img class="icon" src="/images/sports.svg" alt="sports"></a>
-  </div>
-  <div class="category-button">
-    <a href="/geography"><img class="icon" src="/images/geography.svg" alt="geography"></a>
-  </div>
+  <a href="/film" class="category-button">
+    <img class="icon" src="/images/entertainment-film.svg" alt="entertainment-film">
+    <span class="category-label">Film</span>
+  </a>
+
+  <a href="/science" class="category-button">
+    <img class="icon" src="/images/science-nature.svg" alt="science-nature">
+    <span class="category-label">Science</span>
+  </a>
+
+  <a href="/history" class="category-button">
+    <img class="icon" src="/images/history.svg" alt="history">
+    <span class="category-label">History</span>
+  </a>
+
+  <a href="/sports" class="category-button">
+    <img class="icon" src="/images/sports.svg" alt="sports">
+    <span class="category-label">Sports</span>
+  </a>
+
+  <a href="/geography" class="category-button">
+    <img class="icon" src="/images/geography.svg" alt="geography">
+    <span class="category-label">Geography</span>
+  </a>
 </div>
