--- a/views/incorrect.erb
+++ b/views/incorrect.erb
@@ -1,5 +1,5 @@
 <div class="incorrect-screen">
   <h1>Incorrect</h1>  
-  <a href="/<%=@category%>">Try a different <%= @category %> question</a>
-  <a href="/">Pick another category</a>
+  <a href="/game/<%=@category%>">Try a different <%= @category %> question</a>
+  <a href="/game">Pick another category</a>
 </div>
