--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,27 +1,7 @@
-<h1>Pick a category</h1>
-<div id="slice-bar">
-  <a href="/film" class="category-button">
-    <img class="icon" src="/images/entertainment-film.svg" alt="entertainment-film">
-    <span class="category-label">Film</span>
-  </a>
+<h1>Trivia Pie</h1>
 
-  <a href="/science" class="category-button">
-    <img class="icon" src="/images/science-nature.svg" alt="science-nature">
-    <span class="category-label">Science</span>
-  </a>
+<a href="/reset_game">
+  <button>Start Game</button>
+</a>
 
-  <a href="/history" class="category-button">
-    <img class="icon" src="/images/history.svg" alt="history">
-    <span class="category-label">History</span>
-  </a>
-
-  <a href="/sports" class="category-button">
-    <img class="icon" src="/images/sports.svg" alt="sports">
-    <span class="category-label">Sports</span>
-  </a>
-
-  <a href="/geography" class="category-button">
-    <img class="icon" src="/images/geography.svg" alt="geography">
-    <span class="category-label">Geography</span>
-  </a>
-</div>
+<%= @t %>
