--- a/views/correct.erb
+++ b/views/correct.erb
@@ -1,4 +1,4 @@
 <div class="correct-screen">
   <h1>Correct</h1>
-  <a href="/">Pick another category</a>
+  <a href="/game">Pick another category</a>
 </div>
