--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <title>Trivia Pie</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
   </head>
   <body>
     <%= yield %>
