--- a/views/question.erb
+++ b/views/question.erb
@@ -6,11 +6,11 @@
   <div class="question-options">
     <% @options.each do |option| %>
       <% if option == @correct_answer %>
-        <a class="option" href="/<%= @category%>/correct"><%= option %></a>
+        <a class="option" href="/game/<%= @category%>/correct"><%= option %></a>
       <% else %>
-        <a class="option" href="/<%= @category%>/incorrect"><%= option %></a>
+        <a class="option" href="/game/<%= @category%>/incorrect"><%= option %></a>
       <% end %>
     <% end %>
   </div>
-  <a href="/">Pick another category</a>
+  <a href="/game">Pick another category</a>
 </div>
