--- a/views/game.erb
+++ b/views/game.erb
@@ -9,7 +9,7 @@
     <% end %>
   </div>
 
-  <a href="/reset_game"><h2>Reset Game</h2></a>
+  <a href="/reset-game"><h2>Reset Game</h2></a>
 
   <div id="slice-bar">
     <a href="/game/film" class="category-button">
