--- a/views/game.erb
+++ b/views/game.erb
@@ -1,4 +1,4 @@
-<div class="landing-page">
+<div class="game-screen">
   <h1>Pick a category</h1>
 
   <div class="pie-progress">
@@ -9,7 +9,7 @@
     <% end %>
   </div>
 
-  <a href="/reset-game"><h2>Reset Game</h2></a>
+  <a href="/reset-game"><h2>Reset Game</h2></a> 
 
   <div id="slice-bar">
     <a href="/game/film" class="category-button">
