--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
   </head>
   <body>
-    <a href="/">Home</a>
+    <!-- 
+    <header>
+      <h1>Trivia Pie</h1>
+    </header>
+    -->
     <%= yield %>
-    </div>
-  </body>
+  </div>
+</body>
 </html>
