--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,11 @@
 html,
 body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -93,14 +96,13 @@ a:visited{
   border-right: 2px solid  black;
 }
 
-.landing-page {
+.game-screen {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   justify-content: space-between;
   align-items: center;
 
-  height: 100%;
-  width: 100%;
   /*background-color: aquamarine;*/
 }
 
@@ -126,4 +128,16 @@ a:visited{
 
 #slice-off {
   background-color: inherit;
+}
+
+header {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 48px 0px 48px;
+}
+
+ul {
+  list-style-type: none;
 }
