--- a/assets/style.css
+++ b/assets/style.css
@@ -2,10 +2,10 @@ html,
 body {
   height: 100vh;
   width: 100vw;
-  margin: 0px;
-
   display: flex;
+  margin: 0px;
   flex-direction: column;
+  background-color: #fef6e4;
 }
 
 a {
@@ -17,10 +17,17 @@ a:visited{
   color: inherit;
 }
 
+h1 {
+  
+}
+
+h2 {
+  
+}
+
 #slice-bar {
   display: flex;
   justify-content: space-around;
-  background-color: aquamarine;
   width: 100%;
 }
 
@@ -44,7 +51,7 @@ a:visited{
 .option {
   margin: 10px;
   width: 200px;
-  height: 40px;
+  height: 48px;
   border-style: solid;
 
   color: black;
@@ -97,13 +104,23 @@ a:visited{
 }
 
 .game-screen {
+  align-items: stretch;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-between;
   align-items: center;
+  padding: 24px;
+}
 
-  /*background-color: aquamarine;*/
+.question-screen {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 50%;
+  gap: 24px;
 }
 
 #film-slice-on {
@@ -140,4 +157,8 @@ header {
 
 ul {
   list-style-type: none;
+}
+
+.reroll {
+  height: 48px;
 }
