--- a/views/question.erb
+++ b/views/question.erb
@@ -1,16 +1,18 @@
 <div class="question-screen">
-  <div class="question">
-    <h1><%= @category.capitalize %></h1>
-    <h2><%= @question %></h2>
-  </div>
+  <h1><%= @category.capitalize %></h1>
+  <h2><%= @question %></h2>
   <div class="question-options">
     <% @options.each do |option| %>
       <% if option == @correct_answer %>
-        <a class="option" href="/game/<%= @category%>/correct"><%= option %></a>
+        <a class="option" href="/game/<%= @category %>/correct"><%= option %></a>
       <% else %>
-        <a class="option" href="/game/<%= @category%>/incorrect"><%= option %></a>
+        <a class="option" href="/game/<%= @category %>/incorrect"><%= option %></a>
       <% end %>
     <% end %>
   </div>
+  <a href="/game/<%=@category%>">
+    <!-- Pick another <%= @category %> question -->
+    <img class="reroll" src="/images/reroll-icon.svg" alt="reroll-question">
+  </a>
   <a href="/game">Pick another category</a>
 </div>
