--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,6 @@ h2 {
   width: 200px;
   height: 48px;
   border-style: solid;
-
   color: black;
 }
 .option:visited {
@@ -89,7 +88,7 @@ h2 {
   display: flex;
 
   background-color: lightgray;
-  border: 2px solid black;
+  border: 4px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -121,6 +120,16 @@ h2 {
   justify-content: center;
   max-width: 50%;
   gap: 24px;
+}
+
+.complete-screen {
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
 }
 
 #film-slice-on {
