--- a/views/complete.erb
+++ b/views/complete.erb
@@ -1,11 +1,13 @@
-<h1>Congrats, you completed the pie</h1>
-
-  <div class="pie-progress">
-    <% slice_categories = ["film", "science", "history", "sports", "geography"] %>
-    <% slice_categories.each do |category| %>
-      <% slice_id = @slice_status[category] ? "#{category}-slice-on" : "slice-off" %>
-      <div class="category-slice" id="<%= slice_id %>"></div>
-    <% end %>
+<div class="complete-screen">
+  <h1>Congrats, you completed the pie</h1>
+  
+    <div class="pie-progress">
+      <% slice_categories = ["film", "science", "history", "sports", "geography"] %>
+      <% slice_categories.each do |category| %>
+        <% slice_id = @slice_status[category] ? "#{category}-slice-on" : "slice-off" %>
+        <div class="category-slice" id="<%= slice_id %>"></div>
+      <% end %>
+  </div>
+  
+  <a href="/reset-game"><h2 style="text-decoration:underline;">Nice</h2></a>
 </div>
-
-<a href="/"><h2 style="text-decoration:underline;">Nice</h2></a>
