--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,15 @@ h2 {
   border-style: solid;
   color: black;
 }
+
+.correct-option {
+  border: 4px solid green;
+}
+
+.incorrect-option {
+  border: 4px solid red;
+}
+
 .option:visited {
   color: black;
 }
@@ -170,4 +179,9 @@ ul {
 
 .reroll {
   height: 48px;
+}
+
+.new-category {
+  font-weight: bold;
+  text-decoration: underline;
 }
