Added div to hold question information

--- a/assets/style.css
+++ b/assets/style.css
@@ -185,3 +185,10 @@ ul {
   font-weight: bold;
   text-decoration: underline;
 }
+
+.question-info {
+  max-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
