Remove question reset if answer is correct

--- a/views/complete.erb
+++ b/views/complete.erb
@@ -1,5 +1,5 @@
 <div class="complete-screen">
-  <h1>Congrats, you completed the pie</h1>
+  <h1>Congrats, you completed the pie!</h1>
   
     <div class="pie-progress">
       <% slice_categories = ["film", "science", "history", "sports", "geography"] %>
